Dodanie przycisku powrotu do góry

--- a/quiz.html
+++ b/quiz.html
@@ -55,6 +55,12 @@
         </table>
     </div>
 </div>
+<div class="scroll">
+   <button class="btn btn-success">
+      Do góry
+   </button>
+</div>
+
 
 
 <script src="js/script.js"></script>
